<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtk_gps</name>
  <version>0.0.0</version>
  <description>Car that simply incorporates a GPS for its operation</description>
  <maintainer email="ricardoortizpozo@gmail.com">Ricardo Ortiz</maintainer>
  <maintainer email="iesusdavila@gmail.com">Iesus Davila</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rtk_gps_description</exec_depend>
  <exec_depend>rtk_gps_gazebo</exec_depend>
  <exec_depend>rtk_gps_navigation</exec_depend>
  <exec_depend>rtk_gps_teleoperation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>